Bug 406259 - Cannot close project
Summary: Cannot close project
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: project management (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-05 16:12 UTC by Alexander Potashev
Modified: 2020-01-01 14:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-04-05 16:12:58 UTC
SUMMARY
Cannot close project. There is no menu item nor action to close the currently open project.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Simon Depiets 2020-01-01 14:27:08 UTC
Git commit 8cbf0510ca68b9dbe5fa3f92750b4207b24ae15f by Simon Depiets.
Committed on 30/12/2019 at 10:03.
Pushed by sdepiets into branch 'master'.

Add a Close project menu item

M  +6    -0    src/lokalizemainwindow.cpp
M  +2    -0    src/lokalizemainwindowui.rc
M  +4    -0    src/project/projecttab.cpp
M  +1    -0    src/project/projecttab.h

https://commits.kde.org/lokalize/8cbf0510ca68b9dbe5fa3f92750b4207b24ae15f