Add a Close project menu item

BUG:406259